Chagne the ubuntu test so that it runs the test shell script instead of a single Hector run

--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -31,7 +31,7 @@ jobs:
           ver=`awk '/define.*BOOST_LIB_VERSION/ {print $3}' /usr/include/boost/version.hpp`
           echo Boost version $ver
           BOOSTLIB=/usr/local/lib BOOSTVERSION=$ver BOOSTROOT=/usr/include/boost make hector
-          ./src/hector ./inst/input/hector_rcp45.ini
+          bash ./test_hector.sh ./src/hector
           
   macos:
     runs-on: macos-latest
