--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,26 +20,27 @@ jobs:
       matrix:
         config:
           # for latest stable version of R for MacOSX
-          - {os: macOS-latest,   r: 'release'}
-          - {os: macOS-latest,   r: '4.0'}
-          - {os: macOS-latest,   r: '3.6'}
-          - {os: macOS-latest,   r: '3.5'}
-          - {os: macOS-latest,   r: '3.4'}
-          - {os: macOS-latest,   r: '3.3'}
+          #[GOOD]- {os: macOS-latest, r: 'release'}
+          #[GOOD]- {os: macOS-latest, r: '4.0'}
+          - {os: macOS-latest, r: '3.6'}
+          - {os: macOS-latest, r: '3.5'}
+          - {os: macOS-latest, r: '3.4'}
+          - {os: macOS-latest, r: '3.3'}
 
           # for windows stable versions
-          - {os: windows-latest, r: 'release'}
-          - {os: windows-latest,   r: '4.0'}
-          - {os: windows-latest,   r: '3.6'}
-          - {os: windows-latest,   r: '3.5'}
-          - {os: windows-latest,   r: '3.4'}
-          - {os: windows-latest,   r: '3.3'}
+          #[GOOD]- {os: windows-latest, r: 'release'}
+          #[GOOD]- {os: windows-latest, r: '4.0'}
+          #[GOOD]- {os: windows-latest, r: '3.6'}
+          #[GOOD]- {os: windows-latest, r: '3.5'}
+          #[GOOD]- {os: windows-latest, r: '3.4'}
+          #[GOOD]- {os: windows-latest, r: '3.3'}
 
-          # latest stable version of R for ubuntu is 3.5; add release to check for new stable version
-          - {os: ubuntu-16.04,   r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-16.04,   r: '3.5',     rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-16.04,   r: '3.4',     rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-16.04,   r: '3.3',     rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          # latest stable version of R for ubuntu-16.04 is 3.5; ubuntu-latest is migrating to 20.04 by the end of 2020
+          - {os: ubuntu-18.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-18.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-18.04, r: '3.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-18.04, r: '3.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-18.04, r: '3.3', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -78,10 +79,15 @@ jobs:
           sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
           sudo -s eval "$sysreqs"
 
+      - name: Install XQuartz on MacOS
+        if: runner.os == 'macOS'
+        run: brew cask install xquartz
+
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
+
         shell: Rscript {0}
 
       - name: Session info
