--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -13,23 +13,23 @@ jobs:
       matrix:
         config:
           # for latest stable version of R for MacOSX
-          #- {os: macOS-latest, r: 'release'}
-          #- {os: macOS-latest, r: '4.0'}
-          #- {os: macOS-latest, r: '3.6'}
+          - {os: macOS-latest, r: 'release'}
+          - {os: macOS-latest, r: '4.0'}
+          - {os: macOS-latest, r: '3.6'}
 
           # for windows stable versions
           - {os: windows-latest, r: 'release'}
           - {os: windows-latest, r: '4.0'}
-          #- {os: windows-latest, r: '3.6'}
-          #- {os: windows-latest, r: '3.5'}
-          #- {os: windows-latest, r: '3.4'}
-          #- {os: windows-latest, r: '3.3'}
+          - {os: windows-latest, r: '3.6'}
+          - {os: windows-latest, r: '3.5'}
+          - {os: windows-latest, r: '3.4'}
+          - {os: windows-latest, r: '3.3'}
 
           # latest stable version of R for ubuntu-16.04 is 3.5; ubuntu-latest is migrating to 20.04 by the end of 2020
-          #- {os: ubuntu-16.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          #- {os: ubuntu-16.04, r: '3.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          #- {os: ubuntu-16.04, r: '3.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          #- {os: ubuntu-16.04, r: '3.3', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-16.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-16.04, r: '3.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-16.04, r: '3.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-16.04, r: '3.3', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
