--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,9 +1,9 @@
 on: [push, pull_request]
 
-name: R-CMD-check
+name: R-CMD
 
 jobs:
-  R-CMD-check:
+  R-CMD:
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
