--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -6,11 +6,12 @@ jobs:
 
   test-coverage:
 
-    runs-on: macOS-latest
+    runs-on: ${{ matrix.config.os }}
 
     strategy:
       matrix:
-        r: ['3.6']
+        config:
+          - {os: ubuntu-16.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
 
     steps:
       - uses: actions/checkout@v2
@@ -25,13 +26,13 @@ jobs:
       - name: Install dependencies
         env:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+          RSPM: ${{ matrix.config.rspm }}
         run: Rscript -e "install.packages(c('remotes', 'rcmdcheck', 'covr', 'ggplot2', 'rapp', 'here'))" -e "remotes::install_deps(dependencies = TRUE)"
 
       - name: Check
         run: Rscript -e "rcmdcheck::rcmdcheck(error_on = 'error')"
 
       - name: Test coverage
-        if: matrix.r == '3.6'
         run: |
           Rscript -e 'remotes::install_github("r-lib/covr@gh-actions")'
           Rscript -e 'covr::codecov(token = "${{secrets.CODECOV_TOKEN}}")'
