add necessary suggests packages for test suite

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -27,7 +27,7 @@ jobs:
         env:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           RSPM: ${{ matrix.config.rspm }}
-        run: Rscript -e "install.packages(c('remotes', 'rcmdcheck', 'covr', 'ggplot2', 'rapp', 'here'))" -e "remotes::install_deps(dependencies = TRUE)"
+        run: Rscript -e "install.packages(c('remotes', 'rcmdcheck', 'covr', 'ggplot2', 'rapp', 'here', 'ragg', 'rmarkdown', 'knitr', 'nleqslv', 'testthat', 'magrittr'))" -e "remotes::install_deps(dependencies = TRUE)"
 
       - name: Check
         run: Rscript -e "rcmdcheck::rcmdcheck(error_on = 'error')"
