--- a/src/makefile.standalone
+++ b/src/makefile.standalone
@@ -2,7 +2,7 @@ ifeq ($(strip $(CXX)),)
 CXX      = g++
 endif
 CXXFLAGS = -g $(INCLUDES) $(OPTFLAGS) $(CXXEXTRA) $(CXXPROF) $(WFLAGS) -MMD -std=c++11
-CFLAGS   = -g $(INCLUDES) $(OPTFLAGS) -MMD
+CFLAGS   = -g $(INCLUDES) $(OPTFLAGS) $(CCEXTRA) -MMD
 INCLUDES = -I"$(BOOSTROOT)" -I"$(HDRDIR)"
 WFLAGS   = -Wall -Wno-unused-local-typedefs # Turn on warnings, turn off one particularly annoying one that infests Boost libs
 OPTFLAGS = -O3
