--- a/src/makefile.standalone
+++ b/src/makefile.standalone
@@ -17,10 +17,10 @@ export HROOT
 
 ## Boost root
 ifeq ($(strip $(BOOSTVERSION)),)
-BOOSTVERSION	= 1_63_0
+BOOSTVERSION = 1.72.0_3
 endif
 ifeq ($(strip $(BOOSTROOT)),)
-BOOSTROOT	= $(HOME)/src/boost_$(BOOSTVERSION)
+BOOSTROOT =  /usr/local/Cellar/boost/1.72.0_3
 endif
 ifeq ($(strip $(BOOSTLIB)),)
 ## BOOSTROOT can be customized in the environment by compiling as:
