Updating home brew because cask was depreciated see https://github.com/ansible-collections/community.general/issues/1524 for more detaills

--- a/.github/workflows/rcmd.yml
+++ b/.github/workflows/rcmd.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Install XQuartz on MacOS
         if: runner.os == 'macOS'
-        run: brew cask install xquartz
+        run: brew install xquartz
 
       - name: Install dependencies
         run: |
