--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install XQuartz on MacOS
         if: runner.os == 'macOS'
-        run: brew cask install xquartz
+        run: brew install [--cask] xquartz
 
       - name: Install dependencies
         run: |
