--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -45,5 +45,5 @@ jobs:
         run: R CMD INSTALL .
 
       - name: Lint
-        run: lintr::lint_package(linters = with_defaults(object_name_linter = NULL, line_length_linter = line_length_linter(100)), exclusions = list("R/RcppExports.R"))
+        run: lintr::lint_package()   # configuration options are in the .lintr file
         shell: Rscript {0}
