--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -5,6 +5,12 @@ on:
   pull_request:
     branches:
       - master
+  schedule:
+   # * is a special character in YAML so you have to quote this string, it is set up to run at 6am 
+   # on the first day of the month, this is helpful for periods of time when PRs are not being merged.
+    - cron:  '0 6 1 * *'
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 name: test-coverage
 
