--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -11,6 +11,10 @@ on:
       - github_actions
   pull_request:
     branches: master
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    # Launch run at 6am the 1st of every month.	
+    - cron:  '0 6 1 * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
