--- a/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/hector.xcscheme
+++ b/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/hector.xcscheme
@@ -50,6 +50,12 @@
             ReferencedContainer = "container:hector.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "./inst/input/hector_rcp45.ini"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
