--- a/inst/input/hector_rcp45.ini
+++ b/inst/input/hector_rcp45.ini
@@ -144,6 +144,7 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 ; Optional radiative forcing constraint
 ; If supplied, the model will use these data, ignoring what it calculates
 ;Ftot_constrain=csv:constraints/MAGICC_RF_4.5.csv
+aco2=5.35		; radiative forcing, W/m2
 
 ;------------------------------------------------------------------------
 [temperature]
