--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,6 +176,7 @@ export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
 export(WARMINGFACTOR)
 export(Y2000_SO2)
+export(alpha_CO2)
 export(create_biome)
 export(enddate)
 export(fetchvars)
