--- a/.github/workflows/cpp-testing.yaml
+++ b/.github/workflows/cpp-testing.yaml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install gtest
       # following https://github.com/bastianhjaeger/github_actions_gtest_example
-        run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp *.a /usr/lib 
+        run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/lib 
       - name: Install Boost
         run: sudo apt install libboost-filesystem-dev libboost-system-dev
       - name: build and run
