--- a/.github/workflows/cpp-testing.yaml
+++ b/.github/workflows/cpp-testing.yaml
@@ -26,15 +26,14 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install gtest
       # following https://github.com/bastianhjaeger/github_actions_gtest_example
-        run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/lib 
+        run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/local/lib 
       - name: Install Boost
         run: sudo apt install libboost-filesystem-dev libboost-system-dev
       - name: build and run
         run: |
           ver=`awk '/define.*BOOST_LIB_VERSION/ {print $3}' /usr/include/boost/version.hpp`
           echo Boost version $ver
-          GTLIB=/usr/lib
-          GTINC=
-          BOOSTLIB=/usr/local/lib BOOSTVERSION=$ver BOOSTROOT=/usr/include/boost 
-          make gtest
-          ./src/hector
+          GTLIB=/usr/local/lib
+          GTINC=/usr/local/include
+          BOOSTROOT=/usr/local/ 
+          make test
