--- a/src/makefile.standalone
+++ b/src/makefile.standalone
@@ -1,11 +1,11 @@
 ## Makefile for Hector v3
 ## Original author: Robert Link
-## Greatly revised by Ben Bond-Lamberty, 2021
+## Revised by Ben Bond-Lamberty, 2021
 
 ## ----------------------------------------------------
 ## Build settings
 ifeq ($(strip $(CXX)),)
-	CXX      = g++
+	CXX  = g++
 endif 
 CXXFLAGS = -g $(INCLUDES) $(OPTFLAGS) $(CXXEXTRA) $(CXXPROF) $(WFLAGS) -MMD -std=c++14 
 CFLAGS   = -g $(INCLUDES) $(OPTFLAGS) $(CCEXTRA) -MMD
@@ -13,28 +13,28 @@ INCLUDES = -I"$(BOOSTROOT)" -I"$(HDRDIR)"
 WFLAGS   = -Wall -Wno-unused-local-typedefs # Turn off warnings, esp. one common in Boost files
 OPTFLAGS = -O3
 LDFLAGS	 = $(CXXPROF) -L"$(BOOSTLIB)" -L. -Wl,-rpath,"$(BOOSTLIB)"
+HDRDIR	 = $(CURDIR)/../inst/include
 
+## These will be needed by the testing makefile
 export CXXFLAGS OPTFLAGS
 
-## project root
-HROOT	= $(CURDIR)/..
-HDRDIR	= $(HROOT)/inst/include
-export HROOT
-
 ## ----------------------------------------------------
-## Boost settings
+## Boost and Googletest settings
 
-## BOOSTROOT can be customized in the environment by compiling as:
+## BOOSTROOT and GTROOT can both be customized in the environment by e.g.:
 ##     BOOSTROOT=/path/to/boost_X_Y_Z make hector
-## For package manager installs, this could be in any of the following
-## locations (non-exhaustive list):
-## - /usr (boost libraries are in /usr/lib and headers/includes are in /usr/include)
-## - /usr/local
+## For package manager installs, this could be in locations such as:
+## - /usr - I.e., libraries are in /usr/local/lib and headers/includes are in /usr/local/include
+## - /usr/local - This is the default and used by the GitHub Actions YAML files
+##				  If libraries are installed here, there's nothing to do or define
 ## - /usr/local/Cellar/boost_<version_number> -- For MacOS HomeBrew installs
+##
 ## NOTE that if compiling BOOST from source, libraries may be
 ## installed in BOOSTROOT/stage/lib, in which case you may need to
 ## create a symbolic link from BOOSTROOT/lib to BOOSTROOT/stage/lib.
-
+##
+## If the header and library files aren't in include/ and lib/ subdirectories of
+## BOOSTROOT and/or GTROOT, you can also define BOOSTINC, BOOSTLIB, GTINC, and GTLIB.
 ifeq ($(strip $(BOOSTROOT)),)
 	BOOSTROOT	= /usr/local/
 endif
@@ -58,6 +58,7 @@ ifeq ($(strip $(GTLIB)),)
 	GTLIB	= $(GTROOT)/lib
 endif
 
+## These will be needed by the testing makefile
 export GTLIB GTINC
 
 ## ----------------------------------------------------
@@ -65,8 +66,8 @@ export GTLIB GTINC
 CXXSRCS	= $(wildcard *.cpp)
 MAINS   = main.cpp main-api.cpp
 RCPPS   = $(wildcard rcpp_*.cpp) RcppExports.cpp
-## Remove the mains (main.cpp and main-api.cpp) as well Rcpp files
-## They'll be included separately later as needed
+## Remove the mains (main.cpp and main-api.cpp) as well as Rcpp files
+## The main file will be added later; WHICH main depends on the target 
 CXXSRCS := $(filter-out $(MAINS), $(CXXSRCS))
 CXXSRCS := $(filter-out $(RCPPS), $(CXXSRCS))
 CSRCS   = $(wildcard *.c)
@@ -80,24 +81,20 @@ hector: libhector.a main.o
 
 ## Testing target
 testing: INCLUDES += -I$(GTINC)
-testing: libhector.a
+testing: libhector.a 
 	$(MAKE) -C Testing hector-unit-tests
 
-## alternate version that uses the capabilities needed for driving
-## hector from an external source (e.g., an IAM)
-## DO NOT BUILD THIS TARGET UNLESS YOU ARE TESTING HECTOR'S API
-## FUNCTIONALITY.  It uses some hard-coded emissions for testing and likely
+## Alternate version that uses the capabilities needed for driving
+## Hector from an external source (e.g., an IAM)
+## DO NOT BUILD THIS TARGET UNLESS YOU ARE TESTING HECTOR'S API FUNCTIONALITY. 
+## It uses some hard-coded emissions for testing and likely
 ## will not do what you want it to under all circumstances.
 # hector-api: libhector.a main-api.o
 # 	$(CXX) $(LDFLAGS) -o hector-api main-api.o -lhector -lgsl -lgslcblas -lm
 
 ## Targets that do not literally name files
-.PHONY: clean test gtest
+.PHONY: clean 
 
-test: testing
-	cd testing && ./hector-unit-tests
-
-lib: libhector.a
 libhector.a: $(OBJS)
 	ar ru libhector.a *.o
 
