--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,8 +19,10 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: Install libcurl
+      - run: sudo apt-get install libcurl4-openssl-dev
+      
       - uses: actions/checkout@v2
-
       - uses: r-lib/actions/setup-r@v1
 
       - name: Query dependencies
