--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -33,8 +33,5 @@ jobs:
       - name: build and run
         run: |
           sudo apt install libboost-filesystem-dev libboost-system-dev
-
-          ver=`awk '/define.*BOOST_LIB_VERSION/ {print $3}' /usr/include/boost/version.hpp`
-          echo Boost version $ver
-          BOOSTLIB=/usr/local/lib BOOSTVERSION=$ver BOOSTROOT=/usr/include/boost make hector
+          make hector
           bash ./test_hector.sh ./src/hector
