--- a/src/makefile.standalone
+++ b/src/makefile.standalone
@@ -93,7 +93,7 @@ testing: libhector.a
 .PHONY: clean testing chkvar
 
 libhector.a: $(OBJS)
-	ar ru libhector.a *.o
+	ar ru libhector.a $(OBJS)
 
 clean:
 	-$(MAKE) -C testing clean
