Oh my god there are testing/ and Testing/ directories

--- a/src/makefile.standalone
+++ b/src/makefile.standalone
@@ -77,7 +77,7 @@ hector: libhector.a main.o
 
 ## Testing target
 testing: libhector.a
-	ls Testing/ && $(MAKE) -C Testing hector-unit-tests
+	$(MAKE) -C unit-testing hector-unit-tests
 
 ## Alternate version that uses the capabilities needed for driving
 ## Hector from an external source (e.g., an IAM)
@@ -94,7 +94,7 @@ libhector.a: $(OBJS)
 	ar cr libhector.a $(OBJS)
 
 clean:
-	-$(MAKE) -C Testing clean
+	-$(MAKE) -C unit-testing clean
 	-rm hector *.o *.d
 	-rm -rf build
 
@@ -115,4 +115,4 @@ chkvar:
 	@echo $(BOOSTROOT)
 	@echo "GTROOT:"
 	@echo $(GTROOT)
-	-$(MAKE) -C testing chkvar
+	-$(MAKE) -C unit-testing chkvar
