Change to a SINGLE TESTING DIRECTORY
OS capitalization differences suck - this was ridiculously hard to figure out

--- a/src/makefile.standalone
+++ b/src/makefile.standalone
@@ -76,8 +76,8 @@ hector: libhector.a main.o
 	$(CXX) $(LDFLAGS) -o hector main.o -lhector -lm -lboost_system -lboost_filesystem
 
 ## Testing target
-testing: libhector.a 
-	$(MAKE) -C Testing hector-unit-tests
+testing: libhector.a
+	$(MAKE) -C unit-testing hector-unit-tests
 
 ## Alternate version that uses the capabilities needed for driving
 ## Hector from an external source (e.g., an IAM)
@@ -91,10 +91,10 @@ testing: libhector.a
 .PHONY: clean testing chkvar
 
 libhector.a: $(OBJS)
-	ar ru libhector.a $(OBJS)
+	ar cr libhector.a $(OBJS)
 
 clean:
-	-$(MAKE) -C Testing clean
+	-$(MAKE) -C unit-testing clean
 	-rm hector *.o *.d
 	-rm -rf build
 
@@ -109,11 +109,10 @@ chkvar:
 	@echo $(CSRCS)
 	@echo "OBJS:"
 	@echo $(OBJS)
-	ls
 	@echo "INCLUDES:"
 	@echo $(INCLUDES)
 	@echo "BOOSTROOT:"
 	@echo $(BOOSTROOT)
 	@echo "GTROOT:"
 	@echo $(GTROOT)
-	-$(MAKE) -C testing chkvar
+	-$(MAKE) -C unit-testing chkvar
