--- a/src/unit-testing/Makefile
+++ b/src/unit-testing/Makefile
@@ -14,13 +14,13 @@ INCLUDES += -I$(GTINC)
 
 ## ----------------------------------------------------
 ## Default target
-hector-unit-tests: $(OBJS) ../libhector.a
-	$(CXX) $(LDFLAGS) -o hector-unit-tests $(OBJS) -lhector -lgtest -lpthread -lm -lboost_system -lboost_filesystem
+hector-unit-tests: $(OBJS)
+	$(CXX) $(LDFLAGS) $(CXXFLAGS) -o hector-unit-tests $(SRCS) -lhector -lgtest -lpthread -lm -lboost_system -lboost_filesystem
 
 .PHONY: clean chkvar
-	
+
 clean:
-	-rm *.o
+	-rm *.o *.d
 	-rm hector-unit-tests
 
 chkvar:
@@ -31,6 +31,7 @@ chkvar:
 	@echo $(CXXFLAGS)
 	@echo "OBJS:"
 	@echo $(OBJS)
+	ls
 	@echo "LDFLAGS:"
 	@echo $(LDFLAGS)
 	@echo "INCLUDES:"
