--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -34,5 +34,5 @@ jobs:
         run: |
           BOOSTROOT=/usr/local/
           GTROOT=/usr/local/
-          make chkvar testing
-          ./src/Testing/hector-unit-tests
+          make testing
+          ./src/unit-testing/hector-unit-tests
