--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,6 +177,7 @@ export(VOLCANIC_SO2)
 export(WARMINGFACTOR)
 export(Y2000_SO2)
 export(alpha_CO2)
+export(alpha_N2O)
 export(create_biome)
 export(enddate)
 export(fetchvars)
