--- a/inst/input/hector_rcp60.ini
+++ b/inst/input/hector_rcp60.ini
@@ -144,7 +144,8 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 ; Optional radiative forcing constraint
 ; If supplied, the model will use these data, ignoring what it calculates
 ;Ftot_constrain=csv:constraints/MAGICC_RF_8.5.csv
-aco2=5.35		; forcing efficiency for CO2, W/m2
+alpha_CO2=5.35		; forcing efficiency for CO2, W/m2
+alpha_N2O=0.12		; forcing efficiency for N2O, W/m2
 
 ;------------------------------------------------------------------------
 [temperature]
