--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,10 +3,12 @@ on:
     branches:
       - main
       - master
+      - land_tracking
   pull_request:
     branches:
       - main
       - master
+      - land_tracking
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,7 +23,7 @@ jobs:
     steps:
       - name: Install libcurl
         run: sudo apt-get install libcurl4-openssl-dev
-      
+
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
 
