--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -8,14 +8,17 @@ on:
     branches:
       - master
       - github_actions
+      - land_tracking
   pull_request:
-    branches: master
+    branches:
+      - master
+      - land_tracking
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  # This workflow contains one job that builds hector on ubuntu using the 
+  # This workflow contains one job that builds hector on ubuntu using the
   # googletest framework.
   ubuntu:
     runs-on: ubuntu-latest
@@ -26,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install gtest
       # based on https://github.com/bastianhjaeger/github_actions_gtest_example
-        run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/local/lib 
+        run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/local/lib
       - name: Install Boost
         run: sudo apt install libboost-filesystem-dev libboost-system-dev
       - name: build and run
