Switch from alpha to rho nomencalture to be consistent

--- a/inst/input/hector_rcp26_constrained.ini
+++ b/inst/input/hector_rcp26_constrained.ini
@@ -145,8 +145,12 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 ; Optional radiative forcing constraint
 ; If supplied, the model will use these data, ignoring what it calculates
 ;Ftot_constrain=csv:constraints/MAGICC_RF_8.5.csv
-alpha_CO2=5.35		; forcing efficiency for CO2, W/m2
-alpha_N2O=0.12		; forcing efficiency for N2O, W/m2
+rho_CO2=5.35		; forcing efficiency for CO2, W/m2
+rho_N2O=0.12		; forcing efficiency for N2O, W/m2
+rho_CH4=0.036		; forcing efficiency for N2O, W/m2
+rho_tropo3=0.042	; forcing efficiency for tropospheric O3, W/m2
+rho_SO2d=-0.35	; forcing efficiency for direct effects SO2, W/m2
+rho_SO2i=-0.6	; forcing efficiency for indirect effects SO2, W/m2
 
 ;------------------------------------------------------------------------
 [temperature]
