--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,8 +176,6 @@ export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
 export(WARMINGFACTOR)
 export(Y2000_SO2)
-export(alpha_CO2)
-export(alpha_N2O)
 export(create_biome)
 export(enddate)
 export(fetchvars)
@@ -189,6 +187,12 @@ export(isactive)
 export(newcore)
 export(rename_biome)
 export(reset)
+export(rho_CH4)
+export(rho_CO2)
+export(rho_N2O)
+export(rho_SO2d)
+export(rho_SO2i)
+export(rho_tropO3)
 export(run)
 export(runscenario)
 export(sendmessage)
