Expose BC & OC RE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,9 +187,11 @@ export(isactive)
 export(newcore)
 export(rename_biome)
 export(reset)
+export(rho_BC)
 export(rho_CH4)
 export(rho_CO2)
 export(rho_N2O)
+export(rho_OC)
 export(rho_SO2d)
 export(rho_SO2i)
 export(rho_tropO3)
