--- a/inst/input/hector_rcp60_constrained.ini
+++ b/inst/input/hector_rcp60_constrained.ini
@@ -151,6 +151,8 @@ rho_CH4=0.036		; forcing efficiency for N2O, W/m2
 rho_tropo3=0.042	; forcing efficiency for tropospheric O3, W/m2
 rho_SO2d=-0.35	; forcing efficiency for direct effects SO2, W/m2
 rho_SO2i=-0.6	; forcing efficiency for indirect effects SO2, W/m2
+rho_BC=0.0743   ; 
+rho_OC=-0.0128  ; 
 
 ;------------------------------------------------------------------------
 [temperature]
